Updated README file.

--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 MutableCode
+===========
 
-MutableCode is a simple Turing Machine interpreter with special features.
-It is supposed to create random programs and mutate their code.
+MutableCode is a simple Brainfuck-based Turing Machine interpreter with special features.
+It is supposed to create random programs and mutate their code using genetic programming.
 
-Build instructions:
+Build instructions
+------------------
 
 1.) Using make:
 Simply run "make".
@@ -11,4 +13,4 @@ Simply run "make".
 2.) Using CMake:
 Simply run "mkdir build; cd build; cmake ../; make"
 
-The binary "mutablecode" is located under the "build" subdirectory.
+The binary "MutableCode" is located under the "build" subdirectory.
